crates/nash-driver/src/compile/snapshots/nash_driver__compile__nitpick_source_tests__literal_before_constructors_is_opaque.snap
---
source: crates/nash-driver/src/compile/nitpick_source_tests.rs
description: "module Main exposing (..)\nimport Primitive exposing (type bool(..), Data(..))\nimport Builtin\nimport Eq exposing (Eq)\nimport Literal exposing (FromInt, FromString, FromBytes)\ntype Token = A | B\nimpl FromInt Token where\n    fromInt _ = A\nf x =\n    case x of\n        0 -> ()\n        A -> ()\n        B -> ()\n"
---
()
