crates/nash-driver/src/compile/snapshots/nash_driver__compile__nitpick_source_tests__mixed_let_bindings_source_order.snap
---
source: crates/nash-driver/src/compile/nitpick_source_tests.rs
description: "module Eq exposing (Eq)\n\nimport Builtin exposing (..)\n\ntrait Eq 'a where\n    eq : 'a -> 'a -> bool\n\n    neq : 'a -> 'a -> bool\n    neq a b = if eq a b then False else True\n\nimpl Eq int where\n    eq = Builtin.equalsInteger\n\nimpl Eq bytes where\n    eq = Builtin.equalsByteString\n\nimpl Eq string where\n    eq = Builtin.equalsString\n\nimpl Eq bool where\n    eq a b = if a then b else if b then False else True\n\nimpl Eq unit where\n    eq _ _ = True\n\nimpl Eq 'a => Eq (list 'a) where\n    eq xs ys =\n        if Builtin.nullList xs then Builtin.nullList ys\n        else if Builtin.nullList ys then False\n        else if eq (Builtin.headList xs) (Builtin.headList ys) then eq (Builtin.tailList xs) (Builtin.tailList ys)\n        else False\n\nimpl (Eq 'a, Eq 'b) => Eq (pair 'a 'b) where\n    eq a b =\n        if eq (Builtin.fstPair a) (Builtin.fstPair b) then\n            eq (Builtin.sndPair a) (Builtin.sndPair b)\n        else False\nimpl Eq value where\n    eq a b = Builtin.equalsData (Builtin.valueData a) (Builtin.valueData b)\n\nmodule Literal exposing (FromInt, FromString, FromBytes)\n\nimport Builtin exposing (..)\n\ntrait FromInt 'a where\n    fromInt : int -> 'a\n\ntrait FromString 'a where\n    fromString : string -> 'a\n\ntrait FromBytes 'a where\n    fromBytes : bytes -> 'a\n\nimpl FromInt int where\n    fromInt value = value\n\nimpl FromString string where\n    fromString value = value\n\nimpl FromBytes bytes where\n    fromBytes value = value\n\nimpl FromInt Int where\n    fromInt = Builtin.iData\n\nimpl FromBytes Bytes where\n    fromBytes = Builtin.bData\n\nimpl FromString bytes where\n    fromString = Builtin.encodeUtf8\n\nmodule Monad exposing (Monad)\n\n-- Minimal provider for traversal tests of the generated bind call.\ntrait Monad 'm where\n    bind : 'm 'a -> ('a -> 'm 'b) -> 'm 'b\n\nmodule Main exposing (..)\nimport Builtin exposing (type bool(..))\nf flag =\n    let\n        a True = if later then () else ()\n        True = flag\n        later = (case flag of\n                     False -> True)\n    in\n    a flag\n"
info: diagnostic
---
nash::pattern::incomplete

  × Argument pattern is not exhaustive.
   ╭─[Main.nash:5:11]
 4 │     let
 5 │         a True = if later then () else ()
   ·           ────
 6 │         True = flag
   ╰────
  help: Missing patterns:

            False

        Use a case expression in the function body to handle the missing patterns.

nash::pattern::incomplete

  × Binding pattern is not exhaustive.
   ╭─[Main.nash:6:9]
 5 │         a True = if later then () else ()
 6 │         True = flag
   ·         ────
 7 │         later = (case flag of
   ╰────
  help: Missing patterns:

            False

        Use a case expression to handle the missing patterns.

nash::pattern::incomplete

  × Case expression is not exhaustive.
   ╭─[Main.nash:7:18]
 6 │             True = flag
 7 │ ╭─▶         later = (case flag of
 8 │ ╰─▶                      False -> True)
 9 │         in
   ╰────
  help: Missing patterns:

            True

        Add the missing branches; use `todo` for unfinished bodies.
