crates/nash-driver/src/compile/snapshots/nash_driver__compile__nitpick_source_tests__multiple_arguments_before_body.snap
---
source: crates/nash-driver/src/compile/nitpick_source_tests.rs
description: "module Eq exposing (Eq)\n\nimport Builtin exposing (..)\n\ntrait Eq 'a where\n    eq : 'a -> 'a -> bool\n\n    neq : 'a -> 'a -> bool\n    neq a b = if eq a b then False else True\n\nimpl Eq int where\n    eq = Builtin.equalsInteger\n\nimpl Eq bytes where\n    eq = Builtin.equalsByteString\n\nimpl Eq string where\n    eq = Builtin.equalsString\n\nimpl Eq bool where\n    eq a b = if a then b else if b then False else True\n\nimpl Eq unit where\n    eq _ _ = True\n\nimpl Eq 'a => Eq (list 'a) where\n    eq xs ys =\n        if Builtin.nullList xs then Builtin.nullList ys\n        else if Builtin.nullList ys then False\n        else if eq (Builtin.headList xs) (Builtin.headList ys) then eq (Builtin.tailList xs) (Builtin.tailList ys)\n        else False\n\nimpl (Eq 'a, Eq 'b) => Eq (pair 'a 'b) where\n    eq a b =\n        if eq (Builtin.fstPair a) (Builtin.fstPair b) then\n            eq (Builtin.sndPair a) (Builtin.sndPair b)\n        else False\nimpl Eq value where\n    eq a b = Builtin.equalsData (Builtin.valueData a) (Builtin.valueData b)\n\nmodule Literal exposing (FromInt, FromString, FromBytes)\n\nimport Builtin exposing (..)\n\ntrait FromInt 'a where\n    fromInt : int -> 'a\n\ntrait FromString 'a where\n    fromString : string -> 'a\n\ntrait FromBytes 'a where\n    fromBytes : bytes -> 'a\n\nimpl FromInt int where\n    fromInt value = value\n\nimpl FromString string where\n    fromString value = value\n\nimpl FromBytes bytes where\n    fromBytes value = value\n\nimpl FromInt Int where\n    fromInt = Builtin.iData\n\nimpl FromBytes Bytes where\n    fromBytes = Builtin.bData\n\nimpl FromString bytes where\n    fromString = Builtin.encodeUtf8\n\nmodule Monad exposing (Monad)\n\n-- Minimal provider for traversal tests of the generated bind call.\ntrait Monad 'm where\n    bind : 'm 'a -> ('a -> 'm 'b) -> 'm 'b\n\nmodule Main exposing (..)\nimport Builtin exposing (type bool(..), Data(..))\nimport Eq exposing (Eq)\nimport Literal exposing (FromInt, FromString, FromBytes)\nf True False =\n    case True of\n        False -> ()\n"
info: diagnostic
---
nash::pattern::incomplete

  × Argument pattern is not exhaustive.
   ╭─[Main.nash:5:3]
 4 │ import Literal exposing (FromInt, FromString, FromBytes)
 5 │ f True False =
   ·   ────
 6 │     case True of
   ╰────
  help: Missing patterns:

            False

        Use a case expression in the function body to handle the missing patterns.

nash::pattern::incomplete

  × Argument pattern is not exhaustive.
   ╭─[Main.nash:5:8]
 4 │ import Literal exposing (FromInt, FromString, FromBytes)
 5 │ f True False =
   ·        ─────
 6 │     case True of
   ╰────
  help: Missing patterns:

            True

        Use a case expression in the function body to handle the missing patterns.

nash::pattern::incomplete

  × Case expression is not exhaustive.
   ╭─[Main.nash:6:5]
 5 │     f True False =
 6 │ ╭─▶     case True of
 7 │ ╰─▶         False -> ()
   ╰────
  help: Missing patterns:

            True

        Add the missing branches; use `todo` for unfinished bodies.
