crates/nash-driver/src/compile/snapshots/nash_driver__compile__nitpick_source_tests__nested_branch_body_checked.snap
---
source: crates/nash-driver/src/compile/nitpick_source_tests.rs
description: "module Main exposing (..)\nimport Primitive exposing (type bool(..), Data(..))\nimport Builtin\nimport Eq exposing (Eq)\nimport Literal exposing (FromInt, FromString, FromBytes)\nf flag other =\n    case flag of\n        True ->\n            case other of\n                True -> ()\n        False -> ()\n"
info: diagnostic
---
nash::pattern::incomplete

  × Case expression is not exhaustive.
    ╭─[Main.nash:9:13]
  8 │             True ->
  9 │ ╭─▶             case other of
 10 │ │                   True -> ()
 11 │ ╰─▶         False -> ()
    ╰────
  help: Missing patterns:

            False

        Add the missing branches; use `todo` for unfinished bodies.
