crates/nash-driver/src/compile/snapshots/nash_driver__compile__nitpick_source_tests__nested_list_missing.snap
---
source: crates/nash-driver/src/compile/nitpick_source_tests.rs
description: "module Main exposing (..)\nimport Primitive exposing (type bool(..), Data(..))\nimport Builtin\nimport Eq exposing (Eq)\nimport Literal exposing (FromInt, FromString, FromBytes)\nf xs =\n    case xs of\n        [] -> ()\n        [_] -> ()\n"
info: diagnostic
---
nash::pattern::incomplete

  × Case expression is not exhaustive.
   ╭─[Main.nash:7:5]
 6 │     f xs =
 7 │ ╭─▶     case xs of
 8 │ │           [] -> ()
 9 │ ╰─▶         [_] -> ()
   ╰────
  help: Missing patterns:

            _ :: _ :: _

        Add the missing branches; use `todo` for unfinished bodies.
